# podLog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  USAGE.md  podlog_full.patch  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_documents/: SPEC.md  old-source.md  pod_log_design_spec_roadmap_v_0.md
examples/: context_logging.py
src/podlog/: __init__.py  api.py  version.py
src/podlog/config/: __init__.py  loader.py  schema.py
src/podlog/core/: context.py  levels.py  manager.py  registry.py  validation.py
src/podlog/formatters/: csvfmt.py  jsonl.py  logfmt.py  text.py
src/podlog/handlers/: console.py  file_rotating.py  gelf_udp.py  null.py  otlp.py  queue_async.py  syslog.py
src/podlog/utils/: paths.py  time.py
tests/: conftest.py  test_config_loader.py  test_context_and_formatters.py  test_file_rotation.py  test_filters_routing.py  test_paths.py  test_queue_async.py
